[package]
name = "primes"
version = "0.1.1"
authors = ["Wannes Malfait <wannes.malfait@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rayon = "1.10.0"

[profile.release]
lto = true
